--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>THE BEST WEBSITE IS THIS ONE</h1>
+<p>Why, you may ask? 
+Well, there are a plethora of reasons, starting with these.</p>
 
 </body>
 </html>
