--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <body>
 
 <h1>THE BEST WEBSITE IS THIS ONE</h1>
-<p>Why, you may ask? 
-Well, there are a plethora of reasons, starting with these.</p>
+<p>Why, you may ask? Well, there are a plethora of reasons, starting with these.</p>
 
 </body>
 </html>
